--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,15 @@ android {
 
 dependencies {
 
+    //noinspection GradleDependency
     implementation 'androidx.core:core-ktx:1.13.1'
+    //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.annotation:annotation:1.9.1'
+    //noinspection GradleDependency
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    //noinspection GradleDependency
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:23.1.0'
@@ -53,7 +57,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-fragment-ktx:2.8.4'
+    //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-ui-ktx:2.8.4'
 
     //Gson
@@ -69,7 +75,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
     // Worker
-    implementation "androidx.work:work-runtime-ktx:2.10.0"
+    //noinspection GradleDependency
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
     
 
 
