--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 30 13:46:54 PKT 2023
-sdk.dir=C\:\\Users\\FURQAN\\AppData\\Local\\Android\\Sdk
+#Tue Dec 24 13:32:45 PKT 2024
+sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
