--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 30 01:27:30 PKT 2024
-sdk.dir=C\:\\Users\\FURQAN\\AppData\\Local\\Android\\Sdk
+#Sun Jan 26 12:08:00 PKT 2025
+sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
